--- a/assets/style.css
+++ b/assets/style.css
@@ -4,7 +4,7 @@
 
 body{
     background-color: bisque;
-    background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7f7 100%);
+    background-image: linear-gradient(315deg, #f3f3d5 0%, #f5f7f7 100%);
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     display: flex;
     align-items: center;
@@ -12,4 +12,20 @@ body{
     height: 100vh;
     overflow: hidden;
     margin: 0%;
+}
+
+.quiz-container{
+    background-color: white;
+    border-radius: 1em;
+    box-shadow: 0 0 10px 2px rgb(100, 100, 100, .1);
+    width: 600px;
+    overflow: hidden;
+}
+
+.quiz-header{
+    padding: 4rem;
+}
+
+h2{
+    padding: 1rem;
 }
