--- a/assets/style.css
+++ b/assets/style.css
@@ -31,3 +31,30 @@ h2{
     text-align: center;
     margin: 0%;
 }
+
+ul{
+    list-style-type: none;
+    padding: 0;
+}
+
+ul li {
+    font-size: 1.2rem;
+    margin: 1rem 0;
+}
+
+ul li label{
+    cursor: pointer;
+}
+
+button{
+    background-color: blue;
+    color: white;
+    border: none;
+    display: block;
+    width: 100%;
+    cursor: pointer;
+    font-size: 1rem;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: large;
+    padding: 1rem;
+}
