--- a/assets/style.css
+++ b/assets/style.css
@@ -54,7 +54,13 @@ button{
     width: 100%;
     cursor: pointer;
     font-size: 1rem;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: large;
     padding: 1rem;
 }
+
+button:hover{
+    background-color: lightblue;
+    color: black;
+}
+
