--- a/assets/style.css
+++ b/assets/style.css
@@ -1,66 +1,72 @@
+:root {
+    background-color: black;
+}
+
 * {
     box-sizing: border-box;
-}
-
-body{
-    background-color: bisque;
-    background-image: linear-gradient(315deg, #f3f3d5 0%, #f5f7f7 100%);
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    overflow: hidden;
     margin: 0%;
-}
-
-.quiz-container{
-    background-color: white;
-    border-radius: 1em;
-    box-shadow: 0 0 10px 2px rgb(100, 100, 100, .1);
-    width: 600px;
-    overflow: hidden;
-}
-
-.quiz-header{
-    padding: 4rem;
-}
-
-h2{
-    padding: 1rem;
-    text-align: center;
-    margin: 0%;
-}
-
-ul{
-    list-style-type: none;
     padding: 0;
-}
-
-ul li {
-    font-size: 1.2rem;
-    margin: 1rem 0;
-}
-
-ul li label{
-    cursor: pointer;
-}
-
-button{
-    background-color: blue;
-    color: white;
-    border: none;
-    display: block;
-    width: 100%;
-    cursor: pointer;
-    font-size: 1rem;
+    font-size: 62.5%;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: large;
-    padding: 1rem;
 }
 
-button:hover{
-    background-color: lightblue;
+h1{
+    font-size: 5rem;
+    color: white;
+    margin-bottom: 5rem;
+}
+
+h2 {
+    font-size: 4rem;
+    margin-bottom: 4rem;
+}
+
+.contianer {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 80rem;
+    margin: 0 auto;
+    padding: 2rem;
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: column;
+}
+
+.flex-center {
+    justify-content: center;
+    align-items: center;
+}
+
+.justify-center {
+    justify-content: center;
+ }
+
+.text-center {
+    text-align: center;
+}
+
+.hidden {
+    display: none;
+}
+
+.btn {
+    font-size: 2rem;
+    padding: 2rem 0;
+    width: 30rem;
+    text-align: center;
+    margin-bottom: 1rem;
+    text-decoration: none;
     color: black;
+    background: linear-gradient(90deg, blue 0%, rgb(0, 100,255) 100%);
+    border-radius: 4px;
 }
 
+.btn:hover {
+    cursor: pointer;
+    box-shadow: ;
+}
