--- a/assets/style.css
+++ b/assets/style.css
@@ -68,5 +68,17 @@ h2 {
 
 .btn:hover {
     cursor: pointer;
-    box-shadow: ;
+    box-shadow: 0 0.4rem 1.4rem 0 rgb(8, 114, 244, 0.6);
+    transition: transform 150ms;
+    transform: scale(1.03);
+}
+
+.btn[disabled]:hover {
+    cursor: not-allowed;
+    box-shadow: none;
+    transform: none;
+}
+
+#highscore-btn {
+    background: linear-gradient(90deg, rgb(229, 255, 0) 0%, rgb(229, 255, 0) 100%);
 }
