--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,3 +83,40 @@ h2 {
     background: linear-gradient(90deg, rgb(229, 255, 0) 0%, rgb(229, 255, 0) 100%);
 }
 
+/* End Page styles */
+
+.end-form-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 30rem;
+}
+
+input {
+    margin-bottom: 1rem;
+    width: 20rem;
+    padding: 1.5rem;
+    font-size: 1.5rem;
+    border: none;
+}
+
+input::placeholder {
+    color: #aaa;
+}
+
+#username {
+    margin-bottom: 3rem;
+    width: 100%;
+    outline: none;
+}
+
+#end-text {
+    font-size: 2.5rem;
+    color: white;
+    text-align: center;
+}
+
+#saveScoreBtn {
+    border: none;
+}
