--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,16 @@ h2 {
     margin-bottom: 4rem;
 }
 
+h3 {
+    font-size: 2rem;
+    margin-bottom: 2rem;
+}
+
+.timer {
+    padding: 2.4rem;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .contianer {
     width: 100vw;
     height: 100vh;
