--- a/assets/css/highscores.css
+++ b/assets/css/highscores.css
@@ -5,9 +5,11 @@ body {
 #highScoreList {
     list-style: none;
     margin-bottom: 4rem;
+    padding-left: 0%;
 }
 
 .high-score {
     font-size: 3rem;
     margin-bottom: .5rem;
+    color: white;
 }
