--- a/assets/css/highscores.css
+++ b/assets/css/highscores.css
@@ -2,7 +2,7 @@ body {
     color: white;
 }
 
-#highScoreList {
+#highScoresList {
     list-style: none;
     margin-bottom: 4rem;
     padding-left: 0%;
